[gd_scene load_steps=21 format=3 uid="uid://dbd3jyt28pxdr"]

[ext_resource type="Texture2D" uid="uid://lv6tonb4grsn" path="res://asset/art/Stage1BGround.png" id="1_84xdg"]
[ext_resource type="Script" path="res://test_stage.gd" id="1_lhojg"]
[ext_resource type="Texture2D" uid="uid://t8byymesw73q" path="res://asset/art/1A.png" id="2_n7v2v"]
[ext_resource type="Texture2D" uid="uid://c33ngistdg0bs" path="res://asset/art/2A.png" id="3_xs24w"]
[ext_resource type="Texture2D" uid="uid://bpstw7brdntee" path="res://asset/art/3A.png" id="4_q2egb"]
[ext_resource type="Texture2D" uid="uid://b56d2qbvkjbf0" path="res://asset/art/4A.png" id="5_kyca0"]
[ext_resource type="Texture2D" uid="uid://bpemwv245dve7" path="res://asset/art/5A.png" id="6_h38kp"]
[ext_resource type="Texture2D" uid="uid://caovvwf3ru0cy" path="res://asset/art/6.png" id="7_ipuj7"]
[ext_resource type="Texture2D" uid="uid://bwu8fnxacjbxm" path="res://asset/art/7.png" id="8_pl84t"]
[ext_resource type="Texture2D" uid="uid://bxyoxrwsy2jyj" path="res://asset/art/8.png" id="9_o1y6k"]
[ext_resource type="Texture2D" uid="uid://df0jfo46bb0vu" path="res://asset/art/9.png" id="10_eew4s"]
[ext_resource type="Texture2D" uid="uid://c47ly81oewps" path="res://asset/art/0.png" id="11_argfi"]
[ext_resource type="Texture2D" uid="uid://caifnlfmelihq" path="res://asset/art/Replay_BTN.png" id="13_mwr50"]
[ext_resource type="Texture2D" uid="uid://d0uuvgaahkeyb" path="res://asset/art/Idle(1).png" id="14_ae1g8"]
[ext_resource type="AudioStream" uid="uid://b7ysc58jask10" path="res://asset/music/Zachz Winner - blu  Pluggnb  NCS - Copyright Free Music.mp3" id="15_hq4x7"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ix5rx"]
atlas = ExtResource("14_ae1g8")
region = Rect2(9, 8, 67, 78)

[sub_resource type="AtlasTexture" id="AtlasTexture_quq4l"]
atlas = ExtResource("14_ae1g8")
region = Rect2(76, 8, 67, 78)

[sub_resource type="AtlasTexture" id="AtlasTexture_qyu3c"]
atlas = ExtResource("14_ae1g8")
region = Rect2(143, 8, 67, 78)

[sub_resource type="AtlasTexture" id="AtlasTexture_q01dx"]
atlas = ExtResource("14_ae1g8")
region = Rect2(210, 8, 67, 78)

[sub_resource type="SpriteFrames" id="SpriteFrames_a242u"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ix5rx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_quq4l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qyu3c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q01dx")
}],
"loop": true,
"name": &"default",
"speed": 4.0
}]

[node name="Test_Stage" type="Node2D"]
script = ExtResource("1_lhojg")

[node name="Stage_BG" type="TextureRect" parent="."]
anchors_preset = -1
anchor_left = -12.975
anchor_top = -23.375
anchor_right = -12.975
anchor_bottom = -23.375
offset_right = 1080.0
offset_bottom = 1912.0
texture = ExtResource("1_84xdg")
metadata/_edit_use_anchors_ = true
metadata/_edit_group_ = true

[node name="ProblemLabel" type="Label" parent="."]
offset_left = 100.0
offset_top = 360.0
offset_right = 954.0
offset_bottom = 514.0
theme_override_font_sizes/font_size = 100

[node name="Label" type="Label" parent="."]
offset_left = 360.0
offset_top = 696.0
offset_right = 740.0
offset_bottom = 833.0
theme_override_font_sizes/font_size = 100

[node name="Number_Button" type="VBoxContainer" parent="."]
offset_left = 232.0
offset_top = 920.0
offset_right = 360.0
offset_bottom = 1108.0
scale = Vector2(5, 5)

[node name="num_row_123" type="HBoxContainer" parent="Number_Button"]
layout_mode = 2

[node name="one" type="Button" parent="Number_Button/num_row_123"]
layout_mode = 2
theme_override_font_sizes/font_size = 1
icon = ExtResource("2_n7v2v")

[node name="two" type="Button" parent="Number_Button/num_row_123"]
layout_mode = 2
icon = ExtResource("3_xs24w")

[node name="three" type="Button" parent="Number_Button/num_row_123"]
layout_mode = 2
icon = ExtResource("4_q2egb")

[node name="num_row_456" type="HBoxContainer" parent="Number_Button"]
layout_mode = 2

[node name="four" type="Button" parent="Number_Button/num_row_456"]
layout_mode = 2
icon = ExtResource("5_kyca0")

[node name="five" type="Button" parent="Number_Button/num_row_456"]
layout_mode = 2
icon = ExtResource("6_h38kp")

[node name="six" type="Button" parent="Number_Button/num_row_456"]
layout_mode = 2
icon = ExtResource("7_ipuj7")

[node name="num_row_789" type="HBoxContainer" parent="Number_Button"]
layout_mode = 2

[node name="seven" type="Button" parent="Number_Button/num_row_789"]
layout_mode = 2
icon = ExtResource("8_pl84t")

[node name="eight" type="Button" parent="Number_Button/num_row_789"]
layout_mode = 2
icon = ExtResource("9_o1y6k")

[node name="nine" type="Button" parent="Number_Button/num_row_789"]
layout_mode = 2
icon = ExtResource("10_eew4s")

[node name="num_row_0_clear_bckspace" type="HBoxContainer" parent="Number_Button"]
layout_mode = 2
size_flags_horizontal = 4

[node name="clear" type="Button" parent="Number_Button/num_row_0_clear_bckspace"]
layout_mode = 2
text = "Clear"

[node name="zero" type="Button" parent="Number_Button/num_row_0_clear_bckspace"]
layout_mode = 2
icon = ExtResource("11_argfi")
alignment = 0
icon_alignment = 1

[node name="back" type="Button" parent="Number_Button/num_row_0_clear_bckspace"]
layout_mode = 2
text = "back"

[node name="Placeholder_BackButton" type="Button" parent="."]
offset_left = 47.0
offset_top = 1440.0
offset_right = 145.0
offset_bottom = 1538.0
scale = Vector2(1.5, 1.5)
icon = ExtResource("13_mwr50")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(180, 718)
scale = Vector2(5.24813, 4.37821)
sprite_frames = SubResource("SpriteFrames_a242u")
frame = 2
frame_progress = 0.423047

[node name="ScoreLabel" type="Label" parent="."]
offset_left = 513.0
offset_top = 55.0
offset_right = 646.0
offset_bottom = 167.0
theme_override_font_sizes/font_size = 50

[node name="Submit" type="Button" parent="."]
offset_left = 822.0
offset_top = 729.0
offset_right = 1047.0
offset_bottom = 874.0
theme_override_font_sizes/font_size = 100
text = "Pass
"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("15_hq4x7")
autoplay = true

[connection signal="pressed" from="Number_Button/num_row_123/one" to="." method="_on_one_pressed"]
[connection signal="pressed" from="Number_Button/num_row_123/two" to="." method="_on_two_pressed"]
[connection signal="pressed" from="Number_Button/num_row_123/three" to="." method="_on_three_pressed"]
[connection signal="pressed" from="Number_Button/num_row_456/four" to="." method="_on_four_pressed"]
[connection signal="pressed" from="Number_Button/num_row_456/five" to="." method="_on_five_pressed"]
[connection signal="pressed" from="Number_Button/num_row_456/six" to="." method="_on_six_pressed"]
[connection signal="pressed" from="Number_Button/num_row_789/seven" to="." method="_on_seven_pressed"]
[connection signal="pressed" from="Number_Button/num_row_789/eight" to="." method="_on_eight_pressed"]
[connection signal="pressed" from="Number_Button/num_row_789/nine" to="." method="_on_nine_pressed"]
[connection signal="pressed" from="Number_Button/num_row_0_clear_bckspace/clear" to="." method="_on_clear_pressed"]
[connection signal="pressed" from="Number_Button/num_row_0_clear_bckspace/zero" to="." method="_on_zero_pressed"]
[connection signal="pressed" from="Number_Button/num_row_0_clear_bckspace/back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="Placeholder_BackButton" to="." method="_on_placeholder_back_button_pressed"]
[connection signal="pressed" from="Submit" to="." method="_on_submit_pressed"]
